settings/fileTemplates/Kubernetes Service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-service
spec:
  type: {ClusterIP|NodePort|LoadBalancer|ExternalName}
  clusterIP: 00.00.00.00
  externalTrafficPolicy: {Cluster|Local}
  internalTrafficPolicy: {Cluster|Local}
  selector:
    app: ${NAME}
  ports:
    - protocol: TCP
      port: 00
      targetPort: 00
