settings/fileTemplates/Kubernetes Ingress (with rules).yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}-ingress
  annotations:
    nginx.ignress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ${NAME}-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: {Exact|Mixed|Prefix}
        backend:
          service:
            name: ${NAME}-service
            port:
              number: 00
